# dmsp_elfin

./: .gitignore  .nojekyll  .zenodo.json  CLAUDE.md  PRECIPITATING_FLUX_PACKAGE.md  Project.toml  README.md  _index.tex  _quarto.yml  article.qmd  conjunction_finder.jl  conjunction_finder.py  dmsp.qmd  index-preview.html  index.embed.ipynb  index.html  index.out.ipynb  index.qmd  justfile  notes.qmd  paper.qmd  pyproject.toml  sparthb.qmd
lib/PrecipitatingFluxModels/: .gitignore  PACKAGE_SUMMARY.md  Project.toml  QUICKSTART.md  README.md  USAGE_GUIDE.md  juliapkg.json  precipitating_flux_models.py  pyproject.toml
lib/PrecipitatingFluxModels/examples/: basic_usage.jl
lib/PrecipitatingFluxModels/release/: ELFIN=a_t0=2020-01-01_t1=2020-02-01_ids=16-17-18.jld2  ELFIN=a_t0=2020-02-01_t1=2020-03-01_ids=16-17-18.jld2  ELFIN=a_t0=2020-03-01_t1=2020-04-01_ids=16-17-18.jld2  ELFIN=a_t0=2020-04-01_t1=2020-05-01_ids=16-17-18.jld2  ELFIN=a_t0=2020-05-01_t1=2020-06-01_ids=16-17-18.jld2  ELFIN=a_t0=2020-06-01_t1=2020-07-01_ids=16-17-18.jld2  ELFIN=a_t0=2020-07-01_t1=2020-08-01_ids=16-17-18.jld2  ELFIN=a_t0=2020-08-01_t1=2020-09-01_ids=16-17-18.jld2  ELFIN=a_t0=2020-09-01_t1=2020-10-01_ids=16-17-18.jld2  ELFIN=a_t0=2020-10-01_t1=2020-11-01_ids=16-17-18.jld2  ELFIN=a_t0=2020-11-01_t1=2020-12-01_ids=16-17-18.jld2  ELFIN=a_t0=2020-12-01_t1=2021-01-01_ids=16-17-18.jld2  ELFIN=a_t0=2021-01-01_t1=2021-02-01_ids=16-17-18.jld2  ELFIN=a_t0=2021-02-01_t1=2021-03-01_ids=16-17-18.jld2  ELFIN=a_t0=2021-03-01_t1=2021-04-01_ids=16-17-18.jld2  ELFIN=a_t0=2021-04-01_t1=2021-05-01_ids=16-17-18.jld2  (+47 more)
(+102 files in other folders)
