[project]
authors = [{name = "Beforerr", email = "zzj956959688@gmail.com"}]
dependencies = []
name = "dmsp_elfin"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
precipitating-flux-models = { path = "lib/PrecipitatingFluxModels", editable = true }
